# src/main/java/iudx/apd/acl/server/policy/util/Constants.java
@@ -15,60 +15,55 @@ public class Constants {
           + " values ($1,$2,$3,$4,$5);";
 
   public static final String CREATE_POLICY_QUERY =
-      "insert into policy (user_emailid, item_id, owner_id,expiry_at, constraints,status) "
-          + "values ($1, $2, $3, $4, $5,'ACTIVE') returning *;";
+      "insert into policy (user_emailid, item_id, owner_id,expiry_at, constraints,status, additional_info, " +
+          "provider_comment, feedback_to_consumer ) "
+          + "values ($1, $2, $3, $4, $5,'ACTIVE', $6, $7, $8) returning *;";
   public static final String GET_POLICY_4_PROVIDER_QUERY =
-          "SELECT P._id AS \"policyId\", P.item_id AS \"itemId\",\n"
-                  + "RE.item_type AS \"itemType\",\n"
-                  + "RE.resource_server_url AS \"resourceServerUrl\",\n"
-                  + "P.user_emailid AS \"consumerEmailId\",\n"
-                  + "U.first_name AS \"consumerFirstName\",\n"
-                  + "U.last_name AS \"consumerLastName\", U._id AS \"consumerId\",\n"
-                  + "P.status AS \"status\", P.expiry_at AS \"expiryAt\",\n"
-                  + "P.constraints AS \"constraints\",\n"
-                  + "P.updated_at AS \"updatedAt\",\n"
-                  + "P.created_at AS \"createdAt\",\n"
-                  + "R.additional_info AS \"additionalInfo\"\n"
-                  + "FROM policy AS P\n"
-                  + "LEFT JOIN user_table AS U\n"
-                  + "  ON P.user_emailid = U.email_id\n"
-                  + "INNER JOIN resource_entity AS RE\n"
-                  + "  ON RE._id = P.item_id\n"
-                  + "INNER JOIN approved_access_requests AS AAR\n"
-                  + "  ON AAR.policy_id = P._id\n"
-                  + "INNER JOIN request AS R\n"
-                  + "  ON R._id = AAR.request_id\n"
-                  + "WHERE P.owner_id = $1::uuid\n"
-                  + "  AND RE.resource_server_url = $2\n"
-                  + "ORDER BY P.updated_at DESC";
+      "SELECT P._id AS \"policyId\", P.item_id AS \"itemId\",\n"
+          + "RE.item_type AS \"itemType\",\n"
+          + "RE.resource_server_url AS \"resourceServerUrl\","
+          + "P.user_emailid AS \"consumerEmailId\",\n"
+          + "U.first_name AS \"consumerFirstName\",\n"
+          + "U.last_name AS \"consumerLastName\", U._id AS \"consumerId\",\n"
+          + "P.status AS \"status\","
+          + "P.additional_info AS \"additionalInfo\",\n"
+          + "P.provider_comment AS \"providerComment\",\n"
+          + "P.feedback_to_consumer AS \"feedbackToConsumer\"\n"
+          + ", P.expiry_at AS \"expiryAt\",\n"
+          + " P.constraints AS \"constraints\" "
+          + ", P.updated_at AS \"updatedAt\" "
+          + ", P.created_at AS \"createdAt\" "
+          + "FROM policy AS P \n"
+          + "LEFT JOIN user_table AS U\n"
+          + "ON P.user_emailid = U.email_id \n"
+          + "INNER JOIN resource_entity AS RE\n"
+          + "ON RE._id = P.item_id\n"
+          + "AND P.owner_id = $1::uuid "
+          + "AND RE.resource_server_url = $2 "
+          + " ORDER BY P.updated_at DESC";
 
   public static final String GET_POLICY_4_CONSUMER_QUERY =
-          "SELECT P._id AS \"policyId\", P.item_id AS \"itemId\",\n"
-                  + "RE.item_type AS \"itemType\",\n"
-                  + "RE.resource_server_url AS \"resourceServerUrl\",\n"
-                  + "P.owner_id AS \"ownerId\",\n"
-                  + "U.first_name AS \"ownerFirstName\",\n"
-                  + "U.last_name AS \"ownerLastName\",\n"
-                  + "U.email_id AS \"ownerEmailId\",\n"
-                  + "U._id AS \"ownerId\",\n"
-                  + "P.status AS \"status\",\n"
-                  + "P.expiry_at AS \"expiryAt\",\n"
-                  + "P.constraints AS \"constraints\",\n"
-                  + "P.updated_at AS \"updatedAt\",\n"
-                  + "P.created_at AS \"createdAt\",\n"
-                  + "R.additional_info AS \"additionalInfo\"\n"
-                  + "FROM policy AS P\n"
-                  + "INNER JOIN user_table AS U\n"
-                  + "  ON P.owner_id = U._id\n"
-                  + "INNER JOIN resource_entity AS RE\n"
-                  + "  ON RE._id = P.item_id\n"
-                  + "INNER JOIN approved_access_requests AS AAR\n"
-                  + "  ON AAR.policy_id = P._id\n"
-                  + "INNER JOIN request AS R\n"
-                  + "  ON R._id = AAR.request_id\n"
-                  + "WHERE P.user_emailid = $1\n"
-                  + "  AND RE.resource_server_url = $2\n"
-                  + "ORDER BY P.updated_at DESC";
+      "SELECT P._id AS \"policyId\", P.item_id AS \"itemId\",\n"
+          + "RE.item_type AS \"itemType\",\n"
+          + "RE.resource_server_url AS \"resourceServerUrl\",\n"
+          + "P.owner_id AS \"ownerId\", U.first_name AS \"ownerFirstName\",\n"
+          + "U.last_name AS \"ownerLastName\", U.email_id AS \"ownerEmailId\",\n"
+          + "U._id AS \"ownerId\", P.status as \"status\"," +
+           "P.additional_info AS \"additionalInfo\",\n"
+          + "P.provider_comment AS \"providerComment\",\n"
+          + "P.feedback_to_consumer AS \"feedbackToConsumer\"\n"
+          + ", P.expiry_at AS \"expiryAt\",\n"
+          + "P.constraints AS \"constraints\" \n"
+          + ", P.updated_at AS \"updatedAt\" "
+          + ", P.created_at AS \"createdAt\" "
+          + "FROM policy AS P \n"
+          + "INNER JOIN user_table AS U\n"
+          + "ON P.owner_id = U._id \n"
+          + "INNER JOIN resource_entity AS RE\n"
+          + "ON RE._id = P.item_id\n"
+          + "AND P.user_emailid = $1 "
+          + "AND RE.resource_server_url = $2 "
+          + " ORDER BY P.updated_at DESC";
 
   public static final String DELETE_POLICY_QUERY =
       "UPDATE policy SET status='DELETED' "
